fixed alignment of about me box and portfolio box, fixed header top right text alignment, fixed footer links to open new tab

--- a/portfolio/src/assets/styles/About.css
+++ b/portfolio/src/assets/styles/About.css
@@ -1,10 +1,8 @@
 /* About Section */
 .about-section {
-    padding: 2rem;
-    padding-top: 6rem; /* Add padding to push content down */
+
     text-align: center;
     min-height: 100vh; /* Ensure the section takes up the full viewport height */
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
